# LocalDub

./: .env.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  biome.jsonc  bunfig.toml  package.json  pyproject.toml  readme.md  requirements-demucs.txt  requirements-pytorch-cu128.txt  requirements-voxcpm.txt  requirements.txt  todo.md  tsconfig.json
.agents/: asr-loop-fix.md  conv-patch.md  cosyvoice2.md  demucs.md  future-optimization.md  git-workflow.md  model-strategy.md  windows-path-case.md
.opencode/plans/: add-uptime-s.md  architecture-overview.md  skip-translate.md
docs/: GTT.md  VAE-Encoder.md  architecture.md  demucs-optimization.md  gpu-status.md  merge-audio-design.md  model-strategy.md  vscode-audio-cache.md  webgpu-oom.md
scripts/: export-series.ts  install-hooks.ts  setup.ps1  setup.sh  setup.ts  typecheck.ts
scripts/setup/: setup.ps1  setup.sh  setup.ts
types/: ambient.d.ts
