[workspace]
members = ["packages/benchmark/ocr/oar-rs", "packages/config-rs", "packages/separate/demucs_burn", "packages/subtitle-rust", "packages/voxcpm-burn", "packages/app/src-tauri"]
resolver = "3"

[profile.release]
lto = "fat"
codegen-units = 1

[patch.crates-io]
burn-cubecl = { path = "submodule/voxcpm-rs/vendor/patched/burn-cubecl" }
cubecl-spirv = { path = "submodule/voxcpm-rs/vendor/patched/cubecl-spirv" }
