[workspace]
members = ["packages/benchmark/ocr/oar-rs", "packages/config-rs", "packages/core-rs", "packages/device-rs", "packages/separate/demucs_burn", "packages/subtitle-rust", "packages/voxcpm-burn", "packages/app/src-tauri"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
specta = { version = "=2.0.0-rc.22", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1

[patch.crates-io]
burn-cubecl = { path = "submodule/voxcpm-rs/vendor/patched/burn-cubecl" }
cubecl-spirv = { path = "submodule/voxcpm-rs/vendor/patched/cubecl-spirv" }
