[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "localdub"
version = "0.1.0"
description = "LocalDub Python ML dependencies"
requires-python = ">=3.12"
dependencies = [
  # ASR
  "openai-whisper",
  "faster-whisper",
  # 音频处理
  "soundfile",
  "pydub",
  "librosa",
  "numpy",
  # 视频下载
  "yt-dlp[default]",
  # 服务发现
  "zeroconf",
]

[project.optional-dependencies]
demucs = [
  "dora-search>=0.1.12",
  "julius>=0.2.3",
  "einops",
  "openunmix",
  "lameenc>=1.2",
  "tqdm",
]
voxcpm = [
  "pydantic",
  "transformers>=4.36.2",
  "modelscope",
  "inflect",
  "wetext",
  "simplejson",
  "sortedcontainers",
  "spaces",
  "argbind",
  "fastapi",
  "uvicorn[standard]",
]
all = [
  "localdub[demucs,voxcpm]",
]

[project.scripts]
torch-server = "torch_server.pytorch_server:main"
voxcpm-server = "voxcpm_torch_server.server:main"

[tool.setuptools.packages.find]
include = []
